Add hyperlink styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,17 @@ h1, h2 {
 p {
   font-size: 14px;
 }
+
+/* Hyperlink */
+
+a {
+  cursor: pointer;
+  color: #1976d2;
+  text-decoration: none;
+}
+
+a:hover {
+  opacity: 0.8;
+}
+
+
