--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,1 +1,13 @@
-<h2>Products</h2>>
+<h2>Products</h2>
+
+<div *ngFor="let product of products">
+  <h3>
+    {{ product.name }}
+  </h3>
+  <p>
+    {{ product.price }}
+  </p>
+  <p>
+    {{ product.description }}
+  </p>
+</div>
