--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -6,10 +6,9 @@
       {{ product.name }}
     </a>
   </h3>
-  <p>
-    {{ product.price }}
+
+  <p *ngIf="product.description">
+    Description: {{ product.description }}
   </p>
-  <p>
-    {{ product.description }}
-  </p>
+  
 </div>
